@@ -1,3 +1,9 @@
+2003-07-18   Gilbert Fang  <gilbert.fang@sun.com>
+
+	** bug #44592 reopen, no need to do explicitly init for a11y.
+	* init.c: removed
+	* Makefile.am: remove init.c from building.
+	
 2003-07-17  Bolian Yin <bolian.yin@sun.com>
 	* init.c: init calendar a11y support
 	* Makefile.am: add calendar lib
